<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorViolet"
    tools:context=".activities.LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_logo"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/size_welcome_text"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
 />



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome"
        app:layout_constraintBottom_toTopOf="@id/or"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="60dp"
            android:textSize="@dimen/size_menu_item_text"
            android:text="@string/e_mail"
            android:textColor="@color/colorWhite"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email"
            android:layout_width="320dp"
            android:layout_height="45dp"
            android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@id/tv_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/rounded_edit_text"
            android:textColor="@color/colorBlack"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:textSize="@dimen/size_input_text"
            android:inputType="textEmailAddress"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_email"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="60dp"
            android:textSize="@dimen/size_menu_item_text"
            android:text="@string/password"
            android:textColor="@color/colorWhite"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPasswordLayout"
            app:layout_constraintTop_toTopOf="@id/tv_password"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="320dp"
                android:layout_height="45dp"
                android:background="@drawable/rounded_edit_text"
                android:textColor="@color/colorBlack"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:textSize="@dimen/size_input_text"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/etPasswordLayout"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/foreget_password"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/size_error_text"
            android:layout_marginTop="5dp"
            android:layout_marginStart="60dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_login"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textAllCaps="false"
            android:textSize="@dimen/size_button_text"
            app:layout_constraintTop_toBottomOf="@id/etPasswordLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="45dp"
            android:background="@drawable/rounded_edit_text"
            android:backgroundTint="@color/colorPink"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <View
        android:id="@+id/line_one"
        android:layout_width="170dp"
        android:layout_height="1dp"
        android:background="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@id/tv_login_with"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="15dp"
       />
    <View
        android:id="@+id/line_two"
        android:layout_width="170dp"
        android:layout_height="1dp"
        android:background="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@id/tv_login_with"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="15dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/line_one"
        app:layout_constraintBottom_toBottomOf="@id/line_one"
        app:layout_constraintStart_toEndOf="@id/line_one"
        app:layout_constraintEnd_toStartOf="@id/line_two"
        android:text="@string/or"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/size_normal_text"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_login_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_with"

        app:layout_constraintBottom_toTopOf="@id/im_fb"
        android:layout_marginBottom="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/colorWhite"
       />



    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_create_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_acc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/size_error_text"
        android:layout_marginBottom="10dp"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/ib_google"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/selector_button_google"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@id/tv_create_acc"
        app:layout_constraintStart_toStartOf="@id/tv_login_with"
        />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/im_fb"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/selector_button_facebook"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@id/tv_create_acc"
        app:layout_constraintEnd_toEndOf="@id/tv_login_with"
        />



</androidx.constraintlayout.widget.ConstraintLayout>